--- a/chatAplicaciones/ClientApp/src/app/chat/chat.component.html
+++ b/chatAplicaciones/ClientApp/src/app/chat/chat.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 fixed-bottom">
     <div class="chat-window">
-        <div class="app-mensajes">
-            <div *ngFor="let coment of comentarios" [ngClass]="{ 'text-right': coment.idUsuario == IdUsuario  }">
+        <div *ngIf="comentarios || comentarios == null" class="app-mensajes">
+            <div  *ngFor="let coment of comentarios" [ngClass]="{ 'text-right': coment.idUsuario == IdUsuario  }">
                 <span class="badge " [ngClass]="{ 'badge-primary': coment.idUsuario == IdUsuario ,
                                                 'badge-success': coment.idUsuario != IdUsuario}">
                     {{ coment.usuario }}</span>
@@ -11,9 +11,9 @@
             </div>
 
         </div>
-        <input type="text" class="form-control" name="users" id="userlist" style="font-size: 10px;">
+        <input  type="text" class="form-control" name="users" id="userlist" style="font-size: 10px;">
                 
-        <input [(ngModel)]='mensaje' type="text" name="mensaje" class="form-control" (keyup.enter)="enviar_mensaje()"
+        <input  [(ngModel)]='mensaje' type="text" name="mensaje" class="form-control" (keyup.enter)="enviar_mensaje()"
             placeholder="Enviar mensaje">
     </div>
 </div>
